# Epitech-Rtype

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build-fedora.sh  build.py  build.sh  conanfile.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  custom_issue.yml  documentation_issue.yml  feature_request.yml  performance_issue.yml
.github/workflows/: linter.yml  linux_build.yml
admin/: main.cpp  main.hpp
admin/I18n/: i18n.cpp  i18n.hpp
admin/I18n/locales/: en.json  fr.json
admin/Network/: Network.cpp  Network.hpp
admin/Scenes/: Failed.cpp  Failed.hpp  Global.cpp  Global.hpp  Loading.cpp  Loading.hpp  Login.cpp  Login.hpp  Room.cpp  Room.hpp  SceneManager.cpp  SceneManager.hpp
admin/Stream/: admin.rc
admin/Utils/: Chat.cpp  Chat.hpp  CreateButton.cpp  CreateButton.hpp  CreateCard.cpp  CreateCard.hpp  CreateInputField.cpp  CreateInputField.hpp  CreateStatCard.cpp  CreateStatCard.hpp  CreateText.cpp  CreateText.hpp  Flagsi18n.cpp  Flagsi18n.hpp  FontLoader.cpp  FontLoader.hpp
admin/Utils/Flags/: AFlags.hpp  EnglishFlag.hpp  FrenchFlag.hpp  SpanishFlag.hpp
admin/Window/: Window.cpp  Window.hpp
client/: main.cpp  main.hpp
client/include/: EntityFactory.hpp  InputHandler.hpp
client/include/ECS/: BossFactory.hpp  Component.hpp  EnnemyFactory.hpp  Entity.hpp  ObstacleFactory.hpp  ParallaxBackground.hpp  SoundManager.hpp  System.hpp  TextureManager.cpp  TextureManager.hpp  World.hpp
client/include/Menu/: Menu.hpp  MenuState.hpp
client/include/Network/: NetworkManager.hpp
client/include/Parser/: jsonParser.hpp
client/src/: EntityFactory.cpp  InputHandler.cpp  Menu.cpp  NetworkManager.cpp  SoundManager.cpp
client/src/Events/: ChatBoxEvents.cpp  InGameEvents.cpp  MainMenuEvents.cpp  RoomEvents.cpp
client/src/RenderMenus/: AccessibilitiesMenus.cpp  Buttons.cpp  ChatBoxMenus.cpp  MainMenu.cpp  PauseGameOverMenu.cpp  RoomMenus.cpp  Scoreboard.cpp  Settings.cpp
docs/architecture/: README.md
docs/build the project/: README.md
docs/client/: README.md
docs/comparative studies/: README.md
docs/feature addition for devs/: README.md
docs/server implementation/: README.md
docs/server protocol/: README.md  protocol.json
server/: main.cpp  main.hpp
server/Config/Easy/: bullets_easy.json  entitys_easy.json  levels_easy.json
server/Config/Hard/: bullets_hard.json  entitys_hard.json  levels_hard.json
server/Config/Medium/: bullets_medium.json  entitys_medium.json  levels_medium.json
server/Database/: Database.cpp  Database.hpp
server/Database/table/: leaderboards.json  statistic.json  users.json
server/ECS/Component/: Component.hpp
server/ECS/Entity/: Entity.hpp
server/ECS/Factory/: BulletFactory.hpp  EnemyFactory.hpp  PlayerFactory.hpp  PowerupFactory.hpp
server/ECS/System/: System.hpp
server/Errors/: Errors.hpp  ErrorsParsing.hpp  IErrors.hpp
server/GameEngine/: GameEngine.cpp  GameEngine.hpp  IGameEngine.hpp
server/GameServer/: GameServer.cpp  GameServer.hpp
server/Parsing/: Parsing.cpp  Parsing.hpp
server/Player/: IPlayer.hpp  Player.cpp  Player.hpp
server/Protocol/: Protocol.cpp  Protocol.hpp
server/Room/: IRoom.hpp  Room.cpp  Room.hpp
server/RoomManager/: IRoomManager.hpp  RoomManager.cpp  RoomManager.hpp
tests/client/: TestClient.cpp  TestClient.hpp
tests/server/: TestServer.cpp
tests/server/Config/: entitys.json  levels.json
tests/server/Database/table/: users.json
